--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -86,6 +86,19 @@ task:
         PACKERFILE: packer/freebsd.pkr.hcl
 
     - env:
+        PACKERFILE: packer/netbsd_openbsd.pkr.hcl
+
+      matrix:
+        - name: openbsd-vanilla
+        - name: netbsd-vanilla
+        - name: openbsd-postgres
+          depends_on:
+            - openbsd-vanilla
+        - name: netbsd-postgres
+          depends_on:
+            - netbsd-vanilla
+
+    - env:
         PACKERFILE: packer/linux_debian.pkr.hcl
 
       matrix:
@@ -96,10 +109,10 @@ task:
 
   container:
     dockerfile: docker/linux_debian_packer
-    cpu: 0.5
-    memory: 256Mi
+    cpu: 2
+    memory: 4G
 
-  skip: $CIRRUS_LAST_GREEN_CHANGE != '' && $CIRRUS_CRON != 'regular-rebuild' && !changesInclude('.cirrus.yml', 'docker/linux_debian_packer', 'scripts/linux_debian_*', $PACKERFILE)
+  skip: $CIRRUS_LAST_GREEN_CHANGE != '' && $CIRRUS_CRON != 'regular-rebuild' && !changesInclude('.cirrus.yml', 'docker/linux_debian_packer', 'files/bsd/*', 'scripts/bsd/*', 'scripts/linux_debian_*', $PACKERFILE)
   auto_cancellation: false
 
   <<: *gcp_auth_unix
@@ -108,71 +121,25 @@ task:
     - packer --version
 
   build_image_script: |
+    # since freebsd and debian images don't have PKRVARFILE
+    # and packer complains about that, using hacky way to
+    # bypass that error
+    pkrvarfile=packer/${CIRRUS_TASK_NAME%-*}.pkrvars.hcl
+    if test -f "$pkrvarfile"; then
+      PKRVARFILE=-var-file=${pkrvarfile}
+    fi
+    echo $PKRVARFILE
+
     DATE=$(date --utc +'%Y-%m-%dt%H-%M')
+    export PACKER_LOG=1
 
     packer build \
       -only "*.${CIRRUS_TASK_NAME}" \
       -timestamp-ui \
       -force \
+      ${PKRVARFILE} \
       -var "image_date=$DATE" \
       -var "task_name=${CIRRUS_TASK_NAME}" \
-      -var gcp_project=$GCP_PROJECT \
-      "$PACKERFILE"
-    gcloud compute images add-iam-policy-binding \
-      --project "$GCP_PROJECT" \
-      --member=allAuthenticatedUsers \
-      --role=roles/compute.imageUser \
-      pg-ci-${CIRRUS_TASK_NAME}-${DATE}
-
-
-task:
-  matrix:
-    # include minor version in vanilla images
-    - name: openbsd-7-1-vanilla
-      env:
-        PACKERFILE: packer/bsd/openbsd_vanilla.pkr.hcl
-
-    # but not in images used for CI
-    - name: openbsd-7-postgres
-      depends_on:
-        - openbsd-7-1-vanilla
-      env:
-        PACKERFILE: packer/bsd/openbsd_postgres.pkr.hcl
-
-    # see openbsd case
-    - name: netbsd-9-2-vanilla
-      env:
-        PACKERFILE: packer/bsd/netbsd_vanilla.pkr.hcl
-
-    # see openbsd case
-    - name: netbsd-9-postgres
-      depends_on:
-        - netbsd-9-2-vanilla
-      env:
-        PACKERFILE: packer/bsd/netbsd_postgres.pkr.hcl
-
-  container:
-    dockerfile: docker/linux_debian_packer
-    cpu: 2
-    memory: 4G
-
-  skip: $CIRRUS_LAST_GREEN_CHANGE != '' && $CIRRUS_CRON != 'regular-rebuild' && !changesInclude('.cirrus.yml', 'docker/linux_debian_packer', 'files/bsd/*', 'scripts/bsd/*', $PACKERFILE)
-  auto_cancellation: false
-
-  <<: *gcp_auth_unix
-
-  info_script:
-    - packer --version
-
-  build_image_script: |
-    DATE=$(date --utc +'%Y-%m-%dt%H-%M-%S')
-    export PACKER_LOG=1
-
-    packer build \
-      -timestamp-ui \
-      -force \
-      -var "image_date=$DATE" \
-      -var "image_name=${CIRRUS_TASK_NAME}" \
       -var "bucket=$BUCKET" \
       -var gcp_project=$GCP_PROJECT \
       "$PACKERFILE"
@@ -201,8 +168,8 @@ task:
 
   depends_on:
     - freebsd-13
-    - netbsd-9-postgres
-    - openbsd-7-postgres
+    - netbsd-postgres
+    - openbsd-postgres
     - bullseye
     - sid
     - sid-newkernel
