--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -88,34 +88,36 @@ on_failure_googlecompute: &on_failure_googlecompute
     gcloud compute images deprecate pg-ci-${CIRRUS_TASK_NAME}-${DATE} --state=DEPRECATED
 
 
+# task:
+#   name: extract_vcpkg_cache
+
+#   env:
+#     VCPKG_CACHE_DIR: ${CIRRUS_WORKING_DIR}/vcpkg_cache_dir
+
+#   container:
+#     image: debian:latest
+#     cpu: 0.5
+#     memory: 256Mi
+
+#   always:
+#     vcpkg_cache:
+#       folder: ${VCPKG_CACHE_DIR}
+
+#     vcpkg_cache_artifacts:
+#       path: ${VCPKG_CACHE_DIR}/*
+
 task:
-  matrix:
-    - name: freebsd-13
-      env:
-        PACKERFILE: packer/freebsd.pkr.hcl
+  name: windows-ci-vs-2019
 
-    - env:
-        PACKERFILE: packer/linux_debian.pkr.hcl
-        SCRIPTS: scripts/linux_debian_*
-
-      matrix:
-        - name: bullseye
-        - name: sid
-        - name: sid-newkernel
-        - name: sid-newkernel-uring
-
-    - env:
-        PACKERFILE: packer/windows.pkr.hcl
-        SCRIPTS: scripts/windows*
-
-      matrix:
-        - name: windows-ci-vs-2019
-        - name: windows-ci-mingw64
+  env:
+    VCPKG_CACHE_DIR: ${CIRRUS_WORKING_DIR}/vcpkg_cache_dir
+    PACKERFILE: packer/windows.pkr.hcl
+    SCRIPTS: scripts/windows*
 
   container:
     dockerfile: docker/linux_debian_packer
-    cpu: 0.5
-    memory: 256Mi
+    cpu: 2
+    memory: 4G
 
   skip: $CIRRUS_LAST_GREEN_CHANGE != '' && $CIRRUS_CRON != 'regular-rebuild' && !changesInclude('.cirrus.yml', 'docker/linux_debian_packer', $SCRIPTS, $PACKERFILE)
   auto_cancellation: false
@@ -124,6 +126,17 @@ task:
 
   info_script:
     - packer --version
+
+  vcpkg_cache:
+    folder: ${VCPKG_CACHE_DIR}
+
+  vcpkg_cache_helpers_script: |
+    mkdir -p ${VCPKG_CACHE_DIR}
+    cd ${VCPKG_CACHE_DIR}
+    zip -r vcpkg_cache_upload.zip *
+
+  vcpkg_cache_artifacts:
+    path: ${VCPKG_CACHE_DIR}/vcpkg_cache_upload.zip
 
   export_date_script: |
     DATE=$(date --utc +'%Y-%m-%dt%H-%M-%S')
@@ -136,6 +149,8 @@ task:
       -force \
       -var "image_date=$DATE" \
       -var "task_name=${CIRRUS_TASK_NAME}" \
+      -var "vcpkg_cache_dir=${VCPKG_CACHE_DIR}" \
+      -var "cirrus_build_id=${CIRRUS_BUILD_ID}" \
       -var gcp_project=$GCP_PROJECT \
       "$PACKERFILE"
     gcloud compute images add-iam-policy-binding \
@@ -144,300 +159,16 @@ task:
       --role=roles/compute.imageUser \
       pg-ci-${CIRRUS_TASK_NAME}-${DATE}
 
-  on_failure:
-    <<: *on_failure_googlecompute
+  always:
+    unzip_cache_script: |
+      ls -la ${VCPKG_CACHE_DIR}
+      rm -rf ${VCPKG_CACHE_DIR}/*
+      ls -la ${VCPKG_CACHE_DIR}
+      mv ${VCPKG_CACHE_DIR}/../vcpkg_cache.zip ${VCPKG_CACHE_DIR}/vcpkg_cache.zip
+      ls -la ${VCPKG_CACHE_DIR}
+      unzip ${VCPKG_CACHE_DIR}/vcpkg_cache.zip -d ${VCPKG_CACHE_DIR}
+      ls -la ${VCPKG_CACHE_DIR}
+      rm -f ${VCPKG_CACHE_DIR}/vcpkg_cache.zip
+      ls -la ${VCPKG_CACHE_DIR}
+    upload_caches: vcpkg
 
-
-task:
-  matrix:
-    - env:
-        PACKERFILE: packer/netbsd_openbsd.pkr.hcl
-        PKRVARFILE: packer/openbsd.pkrvars.hcl
-      matrix:
-        - name: openbsd-vanilla
-        - name: openbsd-postgres
-          depends_on:
-            - openbsd-vanilla
-
-    - env:
-        PACKERFILE: packer/netbsd_openbsd.pkr.hcl
-        PKRVARFILE: packer/netbsd.pkrvars.hcl
-      matrix:
-        - name: netbsd-vanilla
-        - name: netbsd-postgres
-          depends_on:
-            - netbsd-vanilla
-
-  container:
-    dockerfile: docker/linux_debian_packer
-    cpu: 2
-    memory: 4G
-
-  skip: $CIRRUS_LAST_GREEN_CHANGE != '' && $CIRRUS_CRON != 'regular-rebuild' && !changesInclude('.cirrus.yml', 'docker/linux_debian_packer', 'files/bsd/*', 'scripts/bsd/*', $PACKERFILE, $PKRVARFILE)
-  auto_cancellation: false
-
-  <<: *gcp_auth_unix
-
-  info_script:
-    - packer --version
-
-  export_date_script: |
-    DATE=$(date --utc +'%Y-%m-%dt%H-%M-%S')
-    echo "DATE=${DATE}" | tee -a $CIRRUS_ENV
-
-  build_image_script: |
-    export PACKER_LOG=1
-
-    packer build \
-      -only "*.${CIRRUS_TASK_NAME}" \
-      -timestamp-ui \
-      -force \
-      -var-file="${PKRVARFILE}" \
-      -var "image_date=$DATE" \
-      -var "image_name=${CIRRUS_TASK_NAME}" \
-      -var "bucket=$BUCKET" \
-      -var gcp_project=$GCP_PROJECT \
-      "$PACKERFILE"
-    gcloud compute images add-iam-policy-binding \
-      --project "$GCP_PROJECT" \
-      --member=allAuthenticatedUsers \
-      --role=roles/compute.imageUser \
-      pg-ci-${CIRRUS_TASK_NAME}-${DATE}
-
-  on_failure:
-    <<: *on_failure_googlecompute
-
-
-# Clean up old images regularly - after a while the individually small cost
-# starts adding up
-#
-# Leave old images around for two weeks, to allow recreating CI failures
-# precisely.
-#
-# Only do so after a run successfully creating all images, to avoid deleting
-# all image versions when image creation has failed for a few days.
-task:
-  name: cleanup-old
-
-  container:
-    dockerfile: docker/linux_debian_packer
-    cpu: 0.5
-    memory: 256Mi
-
-  depends_on:
-    - freebsd-13
-    - netbsd-postgres
-    - openbsd-postgres
-    - bullseye
-    - sid
-    - sid-newkernel
-    - sid-newkernel-uring
-    - windows-ci-vs-2019
-    - windows-ci-mingw64
-
-  <<: *gcp_auth_unix
-
-  cleanup_vm_images_script:
-    ./gcp_delete_old_images.py
-
-  # FIXME: deletion doesn't work 100% reliable, because this doesn't correctly
-  # deal with multi-arch containers (gcloud shows the individual architecture
-  # specific containers without tags, even if the manifest has tags)
-  cleanup_container_images_script: |
-    gcloud artifacts docker images list \
-      --include-tags \
-      --format 'value[separator=@](package,version)' \
-      --filter='createTime < -P14d AND -tags:*' \
-      $GCP_REPO | \
-        xargs --verbose --no-run-if-empty -n 1 gcloud artifacts docker images delete || true
-
-
-task:
-  name: build-containers-linux
-
-  compute_engine_instance:
-    image_project: cirrus-images
-    image: family/docker-builder
-    platform: linux
-    cpu: 2
-    memory: 8G
-  env:
-    IMAGE: linux_debian_bullseye_ci
-
-  skip: $CIRRUS_LAST_GREEN_CHANGE != '' && $CIRRUS_CRON != 'regular-rebuild' && !changesInclude('.cirrus.yml', 'scripts/linux_debian*', 'docker/linux_debian_bullseye_ci')
-
-  <<: *gcp_docker_auth_unix
-
-  multibuilder_script:
-    - docker buildx create --name multibuilder
-    - docker buildx use multibuilder
-    - docker buildx inspect --bootstrap
-
-  # XXX: would be nicer to split into multiple steps, so that e.g. build vs
-  # upload time are visible
-  #
-  # XXX: would be nice to test images before tagging them as available
-  #
-  # FIXME: disabled caching for now, there doesn't appear to be a good builtin
-  # way of regenerating cached layers regularly.
-  #    --cache-from type=registry,ref=$GCP_REPO/$IMAGE \
-  #    --cache-to=type=inline \
-  #
-  # Disabled linux/arm64, fails currently due to reasons outside of our control
-  build_script: |
-    DATE=$(date --utc +'%Y-%m-%dt%H-%M-%S')
-
-    docker buildx build \
-      --platform linux/amd64 \
-      --build-arg DATE=$DATE \
-      --build-arg IMAGE_NAME=$IMAGE \
-      --tag $GCP_REPO/$IMAGE:latest \
-      --tag $GCP_REPO/$IMAGE:$DATE \
-      -f docker/$IMAGE \
-      --push \
-      .
-
-    docker buildx imagetools inspect $GCP_REPO/$IMAGE:latest
-
-
-docker_builder:
-  matrix:
-    - name: windows_ci_vs_2019
-    - name: windows_ci_mingw64
-
-  env:
-    PACKERFILE: packer/windows.pkr.hcl
-    PKRVARFILE: packer/windows_container.pkrvars.hcl
-    BUILD_TYPE: docker
-
-  platform: windows
-  os_version: 2019
-
-  skip: $CIRRUS_LAST_GREEN_CHANGE != '' && $CIRRUS_CRON != 'regular-rebuild' && !changesInclude('.cirrus.yml', $PACKERFILE, 'scripts/windows*')
-
-  <<: *gcp_docker_auth_win
-
-  install_packer_script: |
-    choco install packer -y
-
-  info_script: |
-    packer --version
-
-  build_script:
-    # cmd '^' line continuation didn't work
-    # switched to the powershell
-    - ps: |
-        echo "gcp_password = `"$(gcloud auth print-access-token)`"" | Out-File -Append -Encoding ASCII ${Env:PKRVARFILE}
-        $DATE=[datetime]::Utcnow.Tostring("yyyy-MM-dd't'HH-mm-ss")
-
-        packer build `
-          -only "*.${Env:CIRRUS_TASK_NAME}" `
-          -timestamp-ui `
-          -force `
-          -var-file="${Env:PKRVARFILE}" `
-          -var "task_name=${Env:CIRRUS_TASK_NAME}" `
-          -var "image_date=${DATE}" `
-          -var "docker_repo=${Env:GCP_REPO}" `
-          -var "docker_server=${Env:GCP_REGION}-docker.pkg.dev" `
-          -var "build_type=$Env:BUILD_TYPE" `
-          "$Env:PACKERFILE"
-
-
-task:
-  name: test-linux-container-amd64
-  depends_on:
-    - build-containers-linux
-  container:
-    image: $GCP_REPO/linux_debian_bullseye_ci:latest
-  test_script:
-    - uname -a
-    - xsltproc --version
-    - env
-
-# Disabled linux/arm64, fails currently due to reasons outside of our control
-#task:
-#  name: test-linux-container-arm64
-#  depends_on:
-#    - build-containers-linux
-#  arm_container:
-#    image: $GCP_REPO/linux_debian_bullseye_ci:latest
-#  test_script:
-#    - uname -a
-#    - xsltproc --version
-
-
-task:
-  matrix:
-    - name: test-netbsd
-      env:
-        IMAGE_NAME: pg-ci-netbsd-postgres-9-3
-        PLATFORM: netbsd
-
-    - name: test-openbsd
-      env:
-        IMAGE_NAME: pg-ci-openbsd-postgres-7-2
-        PLATFORM: openbsd
-
-  depends_on:
-    - ${PLATFORM}-postgres
-
-  compute_engine_instance:
-    image_project: $GCP_PROJECT
-    image: family/${IMAGE_NAME}
-    platform: ${PLATFORM}
-
-  test_script:
-    - uname -a
-    - env
-
-
-task:
-  matrix:
-    - name: test-windows-vs-2019
-      depends_on:
-        - windows-ci-vs-2019
-      compute_engine_instance:
-        image_project: $GCP_PROJECT
-        image: family/pg-ci-windows-ci-vs-2019
-        platform: windows
-
-    - name: test-windows-vs-2019-amd64-container
-      depends_on:
-        - windows_ci_vs_2019
-      windows_container:
-        image: $GCP_REPO/windows_ci_vs_2019:latest
-
-  test_script:
-    - ver
-    - set
-    - where perl
-    - perl --version
-    - python --version
-    - vcvarsall x64
-    - bison --version
-    - flex --version
-
-
-task:
-  matrix:
-    - name: test-windows-mingw64
-      depends_on:
-        - windows-ci-mingw64
-      compute_engine_instance:
-        image_project: $GCP_PROJECT
-        image: family/pg-ci-windows-ci-mingw64
-        platform: windows
-
-    - name: test-windows-mingw64-amd64-container
-      depends_on:
-        - windows_ci_mingw64
-      windows_container:
-        image: $GCP_REPO/windows_ci_mingw64:latest
-
-  test_script:
-    - ver
-    - set
-    - C:\msys64\usr\bin\bash.exe -lc 'where perl'
-    - C:\msys64\usr\bin\bash.exe -lc 'perl --version'
-    - C:\msys64\usr\bin\bash.exe -lc 'bison --version'
-    - C:\msys64\usr\bin\bash.exe -lc 'flex --version'
