--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -182,7 +182,6 @@ task:
   matrix:
     - env:
         PKRVARFILE: packer/openbsd.pkrvars.hcl
-        VERSION: 7-3
       matrix:
         - env:
             TASK_NAME: openbsd-vanilla
@@ -195,8 +194,6 @@ task:
 
     - env:
         PKRVARFILE: packer/netbsd.pkrvars.hcl
-        VERSION: 9-3
-
       matrix:
         - env:
             TASK_NAME: netbsd-vanilla
@@ -236,7 +233,6 @@ task:
       -timestamp-ui \
       -force \
       -var-file="${PKRVARFILE}" \
-      -var "version=${VERSION}" \
       -var "image_date=$DATE" \
       -var "image_name=${IMAGE_NAME}" \
       -var "prefix=${PREFIX}" \
@@ -253,7 +249,7 @@ task:
 
     gcloud compute images update \
       --project "$GCP_PROJECT" \
-      --family ${IMAGE_NAME}-${VERSION} \
+      --family ${IMAGE_NAME} \
       ${IMAGE_NAME}-${DATE}
 
 
@@ -354,15 +350,15 @@ task:
   name: 'Testing VM Image: ${PREFIX}-${IMAGE_NAME}'
   matrix:
     - env:
-        IMAGE_NAME: netbsd-postgres-9-3
+        IMAGE_NAME: netbsd-postgres
         PLATFORM: netbsd
 
     - env:
-        IMAGE_NAME: openbsd-postgres-7-2
+        IMAGE_NAME: openbsd-postgres
         PLATFORM: openbsd
 
   depends_on:
-    - vmbuild-${PLATFORM}-postgres
+    - vmbuild-${IMAGE_NAME}
 
   compute_engine_instance:
     image_project: $GCP_PROJECT
