fix debian issue

--- a/.cirrus.yml
+++ b/.cirrus.yml
@@ -101,9 +101,9 @@ task:
   name: 'Building VM Image: ${IMAGE_NAME}'
   alias: vmbuild-${TASK_NAME}
   matrix:
-    - env:
-        TASK_NAME: freebsd-13
-        PACKERFILE: packer/freebsd.pkr.hcl
+    # - env:
+    #     TASK_NAME: freebsd-13
+    #     PACKERFILE: packer/freebsd.pkr.hcl
 
     - env:
         PACKERFILE: packer/linux_debian.pkr.hcl
@@ -119,15 +119,15 @@ task:
         - env:
             TASK_NAME: sid-newkernel-uring
 
-    - env:
-        PACKERFILE: packer/windows.pkr.hcl
-        SCRIPTS: scripts/windows*
-        TASK_NAME: windows-ci
+    # - env:
+    #     PACKERFILE: packer/windows.pkr.hcl
+    #     SCRIPTS: scripts/windows*
+    #     TASK_NAME: windows-ci
 
   env:
     IMAGE_NAME: ${PREFIX}-${TASK_NAME}
 
-  depends_on: cleanup-leftover-running
+  # depends_on: cleanup-leftover-running
 
   container:
     dockerfile: docker/linux_debian_packer
@@ -170,228 +170,228 @@ task:
       ${IMAGE_NAME}-${DATE}
 
 
-task:
-  name: 'Building VM Image: ${IMAGE_NAME}'
-  alias: vmbuild-${TASK_NAME}
+# task:
+#   name: 'Building VM Image: ${IMAGE_NAME}'
+#   alias: vmbuild-${TASK_NAME}
 
-  matrix:
-    - env:
-        PKRVARFILE: packer/openbsd.pkrvars.hcl
-        VERSION: 7-3
-      matrix:
-        - env:
-            TASK_NAME: openbsd-vanilla
-          depends_on:
-            - cleanup-leftover-running
-        - env:
-            TASK_NAME: openbsd-postgres
-          depends_on:
-            - vmbuild-openbsd-vanilla
+#   matrix:
+#     - env:
+#         PKRVARFILE: packer/openbsd.pkrvars.hcl
+#         VERSION: 7-3
+#       matrix:
+#         - env:
+#             TASK_NAME: openbsd-vanilla
+#           depends_on:
+#             - cleanup-leftover-running
+#         - env:
+#             TASK_NAME: openbsd-postgres
+#           depends_on:
+#             - vmbuild-openbsd-vanilla
 
-    - env:
-        PKRVARFILE: packer/netbsd.pkrvars.hcl
-        VERSION: 9-3
+#     - env:
+#         PKRVARFILE: packer/netbsd.pkrvars.hcl
+#         VERSION: 9-3
 
-      matrix:
-        - env:
-            TASK_NAME: netbsd-vanilla
-          depends_on:
-            - cleanup-leftover-running
-        - env:
-            TASK_NAME: netbsd-postgres
-          depends_on:
-            - vmbuild-netbsd-vanilla
+#       matrix:
+#         - env:
+#             TASK_NAME: netbsd-vanilla
+#           depends_on:
+#             - cleanup-leftover-running
+#         - env:
+#             TASK_NAME: netbsd-postgres
+#           depends_on:
+#             - vmbuild-netbsd-vanilla
 
-  env:
-    PACKERFILE: packer/netbsd_openbsd.pkr.hcl
-    IMAGE_NAME: ${PREFIX}-${TASK_NAME}
+#   env:
+#     PACKERFILE: packer/netbsd_openbsd.pkr.hcl
+#     IMAGE_NAME: ${PREFIX}-${TASK_NAME}
 
-  container:
-    dockerfile: docker/linux_debian_packer
-    cpu: 2
-    memory: 4G
+#   container:
+#     dockerfile: docker/linux_debian_packer
+#     cpu: 2
+#     memory: 4G
 
-  skip: $CIRRUS_LAST_GREEN_CHANGE != '' && $CIRRUS_CRON != 'regular-rebuild' && !changesInclude('.cirrus.yml', 'docker/linux_debian_packer', 'files/bsd/*', 'scripts/bsd/*', $PACKERFILE, $PKRVARFILE)
-  auto_cancellation: false
+#   skip: $CIRRUS_LAST_GREEN_CHANGE != '' && $CIRRUS_CRON != 'regular-rebuild' && !changesInclude('.cirrus.yml', 'docker/linux_debian_packer', 'files/bsd/*', 'scripts/bsd/*', $PACKERFILE, $PKRVARFILE)
+#   auto_cancellation: false
 
-  <<: *gcp_auth_unix
+#   <<: *gcp_auth_unix
 
-  info_script:
-    - packer --version
+#   info_script:
+#     - packer --version
 
-  export_date_script: |
-    DATE=$(date --utc +'%Y-%m-%dt%H-%M-%S')
-    echo "DATE=${DATE}" | tee -a $CIRRUS_ENV
+#   export_date_script: |
+#     DATE=$(date --utc +'%Y-%m-%dt%H-%M-%S')
+#     echo "DATE=${DATE}" | tee -a $CIRRUS_ENV
 
-  build_image_script: |
-    export PACKER_LOG=1
+#   build_image_script: |
+#     export PACKER_LOG=1
 
-    packer build \
-      -only "*.${TASK_NAME}" \
-      -timestamp-ui \
-      -force \
-      -var-file="${PKRVARFILE}" \
-      -var "version=${VERSION}" \
-      -var "image_date=$DATE" \
-      -var "image_name=${IMAGE_NAME}" \
-      -var "prefix=${PREFIX}" \
-      -var "bucket=$BUCKET" \
-      -var gcp_project=$GCP_PROJECT \
-      "$PACKERFILE"
+#     packer build \
+#       -only "*.${TASK_NAME}" \
+#       -timestamp-ui \
+#       -force \
+#       -var-file="${PKRVARFILE}" \
+#       -var "version=${VERSION}" \
+#       -var "image_date=$DATE" \
+#       -var "image_name=${IMAGE_NAME}" \
+#       -var "prefix=${PREFIX}" \
+#       -var "bucket=$BUCKET" \
+#       -var gcp_project=$GCP_PROJECT \
+#       "$PACKERFILE"
 
-  make_image_public_script: |
-    gcloud compute images add-iam-policy-binding \
-      --project "$GCP_PROJECT" \
-      --member=allAuthenticatedUsers \
-      --role=roles/compute.imageUser \
-      ${IMAGE_NAME}-${DATE}
+#   make_image_public_script: |
+#     gcloud compute images add-iam-policy-binding \
+#       --project "$GCP_PROJECT" \
+#       --member=allAuthenticatedUsers \
+#       --role=roles/compute.imageUser \
+#       ${IMAGE_NAME}-${DATE}
 
-    gcloud compute images update \
-      --project "$GCP_PROJECT" \
-      --family ${IMAGE_NAME}-${VERSION} \
-      ${IMAGE_NAME}-${DATE}
-
-
-# Clean up old images regularly - after a while the individually small cost
-# starts adding up
-#
-# Leave old images around for two weeks, to allow recreating CI failures
-# precisely.
-task:
-  name: Clean up old images
-
-  container:
-    dockerfile: docker/linux_debian_packer
-    cpu: 0.5
-    memory: 256Mi
-
-  <<: *gcp_auth_unix
-
-  cleanup_images_script:
-    ./gcp_delete_old_images.py
+#     gcloud compute images update \
+#       --project "$GCP_PROJECT" \
+#       --family ${IMAGE_NAME}-${VERSION} \
+#       ${IMAGE_NAME}-${DATE}
 
 
-task:
-  name: 'Building Container Image: ${IMAGE}'
-  alias: dockerbuild-${IMAGE}
+# # Clean up old images regularly - after a while the individually small cost
+# # starts adding up
+# #
+# # Leave old images around for two weeks, to allow recreating CI failures
+# # precisely.
+# task:
+#   name: Clean up old images
 
-  compute_engine_instance:
-    image_project: cirrus-images
-    image: family/docker-builder
-    platform: linux
-    cpu: 2
-    memory: 8G
-  env:
-    IMAGE: linux_debian_bullseye_ci
+#   container:
+#     dockerfile: docker/linux_debian_packer
+#     cpu: 0.5
+#     memory: 256Mi
 
-  skip: $CIRRUS_LAST_GREEN_CHANGE != '' && $CIRRUS_CRON != 'regular-rebuild' && !changesInclude('.cirrus.yml', 'scripts/linux_debian*', 'docker/linux_debian_bullseye_ci')
+#   <<: *gcp_auth_unix
 
-  <<: *gcp_docker_auth_unix
-
-  multibuilder_script:
-    - docker buildx create --name multibuilder
-    - docker buildx use multibuilder
-    - docker buildx inspect --bootstrap
-
-  # XXX: would be nicer to split into multiple steps, so that e.g. build vs
-  # upload time are visible
-  #
-  # XXX: would be nice to test images before tagging them as available
-  #
-  # FIXME: disabled caching for now, there doesn't appear to be a good builtin
-  # way of regenerating cached layers regularly.
-  #    --cache-from type=registry,ref=$GCP_REPO/$IMAGE \
-  #    --cache-to=type=inline \
-  #
-  # Disabled linux/arm64, fails currently due to reasons outside of our control
-  build_script: |
-    DATE=$(date --utc +'%Y-%m-%dt%H-%M-%S')
-
-    docker buildx build \
-      --platform linux/amd64 \
-      --build-arg DATE=$DATE \
-      --build-arg IMAGE_NAME=$IMAGE \
-      --tag $GCP_REPO/$IMAGE:latest \
-      --tag $GCP_REPO/$IMAGE:$DATE \
-      -f docker/$IMAGE \
-      --push \
-      .
-
-    docker buildx imagetools inspect $GCP_REPO/$IMAGE:latest
+#   cleanup_images_script:
+#     ./gcp_delete_old_images.py
 
 
-task:
-  name: 'Testing Container Image: ${IMAGE_NAME}'
-  env:
-    IMAGE_NAME: linux_debian_bullseye_ci
-  depends_on:
-    - dockerbuild-${IMAGE_NAME}
-  container:
-    image: $GCP_REPO/${IMAGE_NAME}:latest
-  test_script:
-    - uname -a
-    - xsltproc --version
-    - env
+# task:
+#   name: 'Building Container Image: ${IMAGE}'
+#   alias: dockerbuild-${IMAGE}
 
-# Disabled linux/arm64, fails currently due to reasons outside of our control
-#task:
-#  name: test-linux-container-arm64
-#  depends_on:
-#    - linux_debian_bullseye_ci
-#  arm_container:
-#    image: $GCP_REPO/linux_debian_bullseye_ci:latest
-#  test_script:
-#    - uname -a
-#    - xsltproc --version
+#   compute_engine_instance:
+#     image_project: cirrus-images
+#     image: family/docker-builder
+#     platform: linux
+#     cpu: 2
+#     memory: 8G
+#   env:
+#     IMAGE: linux_debian_bullseye_ci
+
+#   skip: $CIRRUS_LAST_GREEN_CHANGE != '' && $CIRRUS_CRON != 'regular-rebuild' && !changesInclude('.cirrus.yml', 'scripts/linux_debian*', 'docker/linux_debian_bullseye_ci')
+
+#   <<: *gcp_docker_auth_unix
+
+#   multibuilder_script:
+#     - docker buildx create --name multibuilder
+#     - docker buildx use multibuilder
+#     - docker buildx inspect --bootstrap
+
+#   # XXX: would be nicer to split into multiple steps, so that e.g. build vs
+#   # upload time are visible
+#   #
+#   # XXX: would be nice to test images before tagging them as available
+#   #
+#   # FIXME: disabled caching for now, there doesn't appear to be a good builtin
+#   # way of regenerating cached layers regularly.
+#   #    --cache-from type=registry,ref=$GCP_REPO/$IMAGE \
+#   #    --cache-to=type=inline \
+#   #
+#   # Disabled linux/arm64, fails currently due to reasons outside of our control
+#   build_script: |
+#     DATE=$(date --utc +'%Y-%m-%dt%H-%M-%S')
+
+#     docker buildx build \
+#       --platform linux/amd64 \
+#       --build-arg DATE=$DATE \
+#       --build-arg IMAGE_NAME=$IMAGE \
+#       --tag $GCP_REPO/$IMAGE:latest \
+#       --tag $GCP_REPO/$IMAGE:$DATE \
+#       -f docker/$IMAGE \
+#       --push \
+#       .
+
+#     docker buildx imagetools inspect $GCP_REPO/$IMAGE:latest
 
 
-task:
-  name: 'Testing VM Image: ${PREFIX}-${IMAGE_NAME}'
-  matrix:
-    - env:
-        IMAGE_NAME: netbsd-postgres-9-3
-        PLATFORM: netbsd
+# task:
+#   name: 'Testing Container Image: ${IMAGE_NAME}'
+#   env:
+#     IMAGE_NAME: linux_debian_bullseye_ci
+#   depends_on:
+#     - dockerbuild-${IMAGE_NAME}
+#   container:
+#     image: $GCP_REPO/${IMAGE_NAME}:latest
+#   test_script:
+#     - uname -a
+#     - xsltproc --version
+#     - env
 
-    - env:
-        IMAGE_NAME: openbsd-postgres-7-2
-        PLATFORM: openbsd
-
-  depends_on:
-    - vmbuild-${PLATFORM}-postgres
-
-  compute_engine_instance:
-    image_project: $GCP_PROJECT
-    image: family/${PREFIX}-${IMAGE_NAME}
-    platform: ${PLATFORM}
-
-  test_script:
-    - uname -a
-    - env
+# # Disabled linux/arm64, fails currently due to reasons outside of our control
+# #task:
+# #  name: test-linux-container-arm64
+# #  depends_on:
+# #    - linux_debian_bullseye_ci
+# #  arm_container:
+# #    image: $GCP_REPO/linux_debian_bullseye_ci:latest
+# #  test_script:
+# #    - uname -a
+# #    - xsltproc --version
 
 
-task:
-  name: 'Testing VM Image: ${PREFIX}-${IMAGE_NAME}'
-  env:
-    IMAGE_NAME: windows-ci
-  depends_on:
-    - vmbuild-${IMAGE_NAME}
-  compute_engine_instance:
-    image_project: $GCP_PROJECT
-    image: family/${PREFIX}-${IMAGE_NAME}
-    platform: windows
+# task:
+#   name: 'Testing VM Image: ${PREFIX}-${IMAGE_NAME}'
+#   matrix:
+#     - env:
+#         IMAGE_NAME: netbsd-postgres-9-3
+#         PLATFORM: netbsd
 
-  test_vs_script:
-    - ver
-    - set
-    - where perl
-    - perl --version
-    - python --version
-    - vcvarsall x64
-    - bison --version
-    - flex --version
+#     - env:
+#         IMAGE_NAME: openbsd-postgres-7-2
+#         PLATFORM: openbsd
 
-  test_mingw_script:
-    - C:\msys64\usr\bin\bash.exe -lc 'where perl'
-    - C:\msys64\usr\bin\bash.exe -lc 'perl --version'
-    - C:\msys64\usr\bin\bash.exe -lc 'bison --version'
-    - C:\msys64\usr\bin\bash.exe -lc 'flex --version'
+#   depends_on:
+#     - vmbuild-${PLATFORM}-postgres
+
+#   compute_engine_instance:
+#     image_project: $GCP_PROJECT
+#     image: family/${PREFIX}-${IMAGE_NAME}
+#     platform: ${PLATFORM}
+
+#   test_script:
+#     - uname -a
+#     - env
+
+
+# task:
+#   name: 'Testing VM Image: ${PREFIX}-${IMAGE_NAME}'
+#   env:
+#     IMAGE_NAME: windows-ci
+#   depends_on:
+#     - vmbuild-${IMAGE_NAME}
+#   compute_engine_instance:
+#     image_project: $GCP_PROJECT
+#     image: family/${PREFIX}-${IMAGE_NAME}
+#     platform: windows
+
+#   test_vs_script:
+#     - ver
+#     - set
+#     - where perl
+#     - perl --version
+#     - python --version
+#     - vcvarsall x64
+#     - bison --version
+#     - flex --version
+
+#   test_mingw_script:
+#     - C:\msys64\usr\bin\bash.exe -lc 'where perl'
+#     - C:\msys64\usr\bin\bash.exe -lc 'perl --version'
+#     - C:\msys64\usr\bin\bash.exe -lc 'bison --version'
+#     - C:\msys64\usr\bin\bash.exe -lc 'flex --version'
